--- a/module6/esme.html
+++ b/module6/esme.html
@@ -13,7 +13,7 @@
 <body>
     <div class="grid-container">
         <header>
-            <h1>Esmes' page</h1>
+            <h1>Esme's page</h1>
         </header>
 
         <nav><h2>Other pages</h2>
