--- a/module6/esme.html
+++ b/module6/esme.html
@@ -29,6 +29,11 @@
 
         <aside>
             <img src="images/esme.jpeg" alt="Esme the dog">
+		 <h2>Local nemesis</h2>
+        	 <audio controls>
+                <source src="images/lawn-mower-01.mp3" type="audio/mp3">
+                <a href="images/lawn-mower-01.mp3">Local nemesis</a> (.mp3, 1.7MB, running time: 1m52s)
+                </audio>
         </aside>
 
         <footer>
